include(Thirdparty)
include(CMakeDependentOption)

option(BUILD_CURL_LIBS "BUILD_NETWORK_LIBS" OFF)
option(BUILD_WEBSOCKET_LIBS "BUILD_WEBSOCKET_LIBS" OFF)
option(BUILD_AUDIO_LIBS "BUILD_AUDIO_LIBS" ON)

# list of dependency targets
add_custom_target(Contrib COMMAND ${CMAKE_COMMAND} -E rm -rf ${DEPS_PREFIX_LOCATION})
if (NOT EMSCRIPTEN)
    add_dependencies(Contrib Target_SDL2)
endif ()
if (BUILD_AUDIO_LIBS)
    add_dependencies(Contrib Target_Vorbis)
    add_dependencies(Contrib Target_Theora)
endif ()
if (BUILD_CURL_LIBS)
    add_dependencies(Contrib Target_cpr)
endif ()
if (BUILD_WEBSOCKET_LIBS)
    add_dependencies(Contrib Target_GameNetworkingSockets)
endif ()
add_dependencies(Contrib Target_sqlite)
add_dependencies(Contrib Target_sol2)
add_dependencies(Contrib Target_Bullet)
add_dependencies(Contrib Target_OGRE)
